#
# Copyright (C) 2016 Chuck Tuffli
# All rights reserved.
# This SOFTWARE is licensed under the LICENSE provided in the
# Copyright file. By downloading, installing, copying, or otherwise
# using the SOFTWARE, you agree to be bound by the terms of that
# LICENSE.
AM_CFLAGS = -Wall -Werror

AM_LDFLAGS = -lxo -lpciaccess

bin_PROGRAMS = pci

pci_SOURCES = \
	pci.c \
	pci_devlist.c \
	pci_tree.c \
	pci_reg.c \
	pci_class.c

